# rust_url_shortener

./: Cargo.toml
src/: main.rs
src/db/: connection.rs
src/routes/: redirect.rs  url_shortener.rs
src/services/: mod.rs  url_shortener_service.rs
