[package]
name = "spotify-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
rocket_codegen = "0.5"
rocket_contrib = "0.4.11"
serde_derive = "1.0"
serde_json = "1.0"
mysql = "25.0.0"
diesel = { version = "2.1.0", features = ["mysql"] }
dotenv = "0.15.0"
nanoid = "0.4.0"
